Fixed some vertical alignment issues

--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -89,8 +89,7 @@ a:hover {
 .about {
 	display: block;
 	width: 100%;
-	position: relative;
-	top: 200px;
+	margin-top: 150px;
 
 	background-color: darkgray;
 	padding: 40px;
